--- a/templates/home/guard_homepage.html
+++ b/templates/home/guard_homepage.html
@@ -9,7 +9,7 @@
     <div class="row">
         <div class=" col-md-3 col-lg-3 card text-white bg-info mb-3 "
              style="max-width: 20rem; margin-top:3rem; margin-left:2rem;">
-            <div class="card-header">Today's Scheduled Visits</div>
+            <div class="card-header">Scheduled Visits</div>
             <div class="card-body">
                 {% for vr in user %}
                     <dl>
@@ -25,16 +25,17 @@
             <div class="card visitor-verify my-5">
                 <div class="card-body">
                     <h5 class="card-title text-center">VERIFY</h5>
-                    <form class="form-signin">
+                    <form method="post" class="form-signin">
+                        {% csrf_token %}
                         <div class="form-label-group">
-                            <input type="tel" name="phone" pattern="[0-9]{10}" id="inputEmail" class="form-control"
+                            <input type="tel" name="phone" pattern="[0-9]{10}" id="inputPhoneNumber" class="form-control"
                                    placeholder="Phone Number">
-                            <label for="inputEmail">Phone Number</label>
+                            <label for="inputPhoneNumber">Phone Number</label>
                         </div>
 
                         <div class="form-label-group">
-                            <input type="password" id="inputPassword" class="form-control" placeholder="ID number">
-                            <label for="inputPassword">ID number</label>
+                            <input type="text" name="idnum" id="inputId" class="form-control" placeholder="ID number">
+                            <label for="inputId">ID number</label>
                         </div>
                         <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Scan QR
                         </button>
@@ -48,10 +49,12 @@
              style="max-width: 20rem; margin-top:3rem; margin-left:2rem;">
             <div class="card-header">Visitors Inside</div>
             <div class="card-body">
+                {% for vr in visitor %}
                 <dl>
-                    <dt>{{ vr.visitor_id }}</dt>
+                    <dt>{{ vr.schedule_id }}</dt>
                     <dd> {{ vr.in_time }}</dd>
                 </dl>
+                {% endfor %}
             </div>
         </div>
 
