--- a/templates/home/dashboard.html
+++ b/templates/home/dashboard.html
@@ -37,7 +37,7 @@
 
         <div class="col-6">
             <br>
-            <a href="{% url 'visitor:user_past_visitor' %}">1. Past Visitors</a><br>
+            <a href="{% url 'visitor:past_visitor' %}">1. Past Visitors</a><br>
             <a href="{% url 'visitor:schedule' %}">2. Schedule new Visit</a><br>
         </div>
 
