--- a/templates/home/guard_homepage.html
+++ b/templates/home/guard_homepage.html
@@ -37,9 +37,9 @@
                             <input type="text" name="idnum" id="inputId" class="form-control" placeholder="ID number">
                             <label for="inputId">ID number</label>
                         </div>
-                        <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Scan QR
+                        <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit" name="action" value="Send">Scan QR
                         </button>
-                        <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">VERIFY</button>
+                        <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit" name="action" value="Send">VERIFY</button>
                     </form>
                 </div>
             </div>
