--- a/templates/base.html
+++ b/templates/base.html
@@ -73,6 +73,7 @@
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
 <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+<script type="text/javascript" src={% static 'qrcode/qrcode.js' %}></script>
 
 {% block script %}
 {% endblock %}
