--- a/templates/base.html
+++ b/templates/base.html
@@ -8,54 +8,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="{% static 'custom/main.css' %}">
 
     {% block title %}
         <title>Base</title>
     {% endblock %}
 
-<style>
-    a {
-        color: skyblue;
-    }
-</style>
+    <style>
+        a {
+            color: skyblue;
+        }
+
+        a:hover {
+            color: yellow;
+        }
+
+        li {
+            list-style-type: none;
+            display: inline;
+        }
+    </style>
 
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+<nav class="navbar navbar-dark bg-dark ">
     <a class="navbar-brand" href="{% url 'home' %}">
+        <img src="/media/profile_photo/logo.png" style="width:40px; height:40px;">
         RRSCW
     </a>
-
-        <div>
-            {% if request.user.is_authenticated %}
-                <a href="{% url 'logout' %}">
-                    <i class="fa fa-power-off"></i>
-                    Logout</a>
-                <a href="{% url 'password_reset' %}">
-                    <i class="fa fa-group"></i>
-                    Reset Password</a>
-                <!--a href="">
-                    <i class="fa fa-male"></i>
-                    My Profile</a-->
-                <p style="color: white"> {{ request.user.get_full_name }}</p>
-                <p>
-                    <a href="{% url 'visitor:dashboard' %}">Dashboard</a>
-                    <a href="{% url 'visitor:view_profile' %}">View Profile  </a>
-
-            <a href="{% url 'visitor:schedule' %}">Create Schedule </a></p>
-            <a href="#"></a>
+    {% if request.user.is_authenticated %}
+        <ul class="navbar-right">
+            <li ><a href="{% url 'logout' %}">
+                <i class="fa fa-power-off"></i>
+                Logout</a></li>
+            <li ><a href="{% url 'password_reset' %}">
+                <i class="fa fa-group"></i>
+                Reset Password</a></li>
+           >
+        </ul>
 
 
-            {% else %}
-                <a href="{% url 'visitor:register' %}">
-                    <i class="fa fa-power-off"></i>
-                    Register</a>
-                <a href="{% url 'login' %}">
-                    <i class="fa fa-male"></i>
-                    Login</a>
-            {% endif %}
-        </div>
+    {% else %}
+        <ul class="navbar-right">
+            <li ><a href="{% url 'visitor:register' %}">
+                <i class="fa fa-power-off"></i>
+                Register</a></li>
+            <li><a href="{% url 'login' %}">
+                <i class="fa fa-male"></i>
+                Login</a></li>
+        </ul>
+    {% endif %}
+
+</nav>
+<nav class="navbar navbar-dark bg-dark ">
+    {% if request.user.is_authenticated %}
+        <ul class=" navbar-left">
+            <li style="padding-right: 5px;: "><a href="{% url 'visitor:dashboard' %}">Dashboard</a></li>
+            <li style="padding-right: 5px;: "><a href="{% url 'visitor:view_profile' %}">View Profile </a></li>
+            <li><a href="{% url 'visitor:schedule' %}">Create Schedule </a></li>
+        </ul>
+
+        </ul>
+        <ul class="navbar-right">
+            <li>Hello {{ request.user.get_full_name }}</li>
+        </ul>
+    {% endif %}
+
+
 </nav>
 
 
@@ -63,6 +83,9 @@
 
 {% endblock %}
 
+<footer class="mt-5">
+
+</footer>
 </body>
 
 
